# asset-procedure-schema

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustc-ice-2026-01-10T22_05_22-3588428.txt  rustc-ice-2026-01-10T22_05_22-3588813.txt  rustc-ice-2026-01-10T22_05_33-3605737.txt  rustc-ice-2026-01-10T22_05_33-3605738.txt  rustc-ice-2026-01-10T22_05_34-3606205.txt  rustc-ice-2026-01-10T22_05_34-3606222.txt  rustc-ice-2026-01-10T22_05_38-3609641.txt  rustc-ice-2026-01-10T22_05_38-3609642.txt  workspace-analyzer.mmd  workspace.mmd
.github/workflows/: rust.yml
aps/aps-aliquoting_procedure_templates/: Cargo.toml
aps/aps-aliquoting_procedure_templates/src/: lib.rs
aps/aps-aliquoting_procedures/: Cargo.toml
aps/aps-aliquoting_procedures/src/: lib.rs
aps/aps-asset_compatibility_rules/: Cargo.toml
aps/aps-asset_model_ancestors/: Cargo.toml
aps/aps-asset_model_tables/: Cargo.toml
aps/aps-asset_models/: Cargo.toml
aps/aps-asset_models/src/: lib.rs
aps/aps-asset_tables/: Cargo.toml
aps/aps-assets/: Cargo.toml
aps/aps-assets/src/: lib.rs
aps/aps-ball_mill_machine_models/: Cargo.toml
aps/aps-ball_mill_machines/: Cargo.toml
aps/aps-ball_mill_machines/src/: lib.rs
aps/aps-ball_mill_procedure_templates/: Cargo.toml
aps/aps-ball_mill_procedure_templates/src/: lib.rs
aps/aps-ball_mill_procedures/: Cargo.toml
aps/aps-ball_mill_procedures/src/: lib.rs
aps/aps-bead_models/: Cargo.toml
aps/aps-bead_models/src/: lib.rs
aps/aps-brands/: Cargo.toml
aps/aps-camera_models/: Cargo.toml
aps/aps-cameras/: Cargo.toml
aps/aps-cameras/src/: lib.rs
aps/aps-centrifuge_models/: Cargo.toml
aps/aps-centrifuge_procedure_templates/: Cargo.toml
aps/aps-centrifuge_procedures/: Cargo.toml
aps/aps-centrifuges/: Cargo.toml
aps/aps-chemical_entities/: Cargo.toml
aps/aps-col_taxa/: Cargo.toml
aps/aps-col_taxa/src/: lib.rs
aps/aps-commercial_ball_mill_machine_lots/: Cargo.toml
aps/aps-commercial_ball_mill_machine_lots/src/: lib.rs
aps/aps-commercial_ball_mill_machine_models/: Cargo.toml
aps/aps-commercial_camera_lots/: Cargo.toml
aps/aps-commercial_camera_lots/src/: lib.rs
aps/aps-commercial_camera_models/: Cargo.toml
aps/aps-commercial_centrifuge_lots/: Cargo.toml
aps/aps-commercial_centrifuge_lots/src/: lib.rs
aps/aps-commercial_centrifuge_models/: Cargo.toml
aps/aps-commercial_freeze_dryer_lots/: Cargo.toml
aps/aps-commercial_freeze_dryer_models/: Cargo.toml
aps/aps-commercial_freezer_lots/: Cargo.toml
aps/aps-commercial_freezer_models/: Cargo.toml
aps/aps-commercial_freezer_models/src/: lib.rs
aps/aps-commercial_geopositioning_device_lots/: Cargo.toml
aps/aps-commercial_geopositioning_device_models/: Cargo.toml
aps/aps-commercial_marker_lots/: Cargo.toml
aps/aps-commercial_marker_models/: Cargo.toml
aps/aps-commercial_mass_spectrometer_lots/: Cargo.toml
aps/aps-commercial_mass_spectrometer_models/: Cargo.toml
aps/aps-commercial_panel_lots/: Cargo.toml
aps/aps-commercial_panel_models/: Cargo.toml
aps/aps-commercial_personal_protective_equipment_lots/: Cargo.toml
aps/aps-commercial_personal_protective_equipment_models/: Cargo.toml
aps/aps-commercial_phone_device_lots/: Cargo.toml
aps/aps-commercial_phone_device_models/: Cargo.toml
aps/aps-commercial_phone_device_models/src/: lib.rs
aps/aps-commercial_pipette_tip_lots/: Cargo.toml
aps/aps-commercial_pipette_tip_models/: Cargo.toml
aps/aps-commercial_product_lots/: Cargo.toml
aps/aps-commercial_products/: Cargo.toml
aps/aps-commercial_products/src/: lib.rs
aps/aps-commercial_volume_measuring_device_lots/: Cargo.toml
aps/aps-commercial_volume_measuring_device_models/: Cargo.toml
aps/aps-commercial_weighing_device_lots/: Cargo.toml
aps/aps-commercial_weighing_device_models/: Cargo.toml
aps/aps-container_compatibility_rules/: Cargo.toml
aps/aps-container_compatibility_rules/src/: lib.rs
aps/aps-container_models/: Cargo.toml
aps/aps-container_sealer_models/: Cargo.toml
aps/aps-container_sealing_procedure_templates/: Cargo.toml
aps/aps-container_sealing_procedure_templates/src/: lib.rs
aps/aps-container_sealing_procedures/: Cargo.toml
aps/aps-containers/: Cargo.toml
aps/aps-containers/src/: lib.rs
aps/aps-dag-asset_models/: Cargo.toml
aps/aps-dag-assets/: Cargo.toml
aps/aps-dag-assets/src/: lib.rs
aps/aps-dag-entities/: Cargo.toml
aps/aps-dag-ownables/: Cargo.toml
aps/aps-dag-owners/: Cargo.toml
aps/aps-dag-procedure_templates/: Cargo.toml
aps/aps-dag-procedure_templates/src/: lib.rs
aps/aps-dag-procedures/: Cargo.toml
aps/aps-dag-procedures/src/: lib.rs
aps/aps-dag-table_names/: Cargo.toml
aps/aps-digital_asset_models/: Cargo.toml
aps/aps-digital_assets/: Cargo.toml
aps/aps-digital_assets/src/: lib.rs
aps/aps-disposal_procedure_templates/: Cargo.toml
aps/aps-disposal_procedure_templates/src/: lib.rs
aps/aps-disposal_procedures/: Cargo.toml
aps/aps-disposal_procedures/src/: lib.rs
aps/aps-entities/: Cargo.toml
aps/aps-entities/src/: lib.rs
aps/aps-fractioning_procedure_templates/: Cargo.toml
aps/aps-fractioning_procedures/: Cargo.toml
aps/aps-fractioning_procedures/src/: lib.rs
aps/aps-freeze_dryer_models/: Cargo.toml
aps/aps-freeze_dryers/: Cargo.toml
aps/aps-freeze_drying_procedure_templates/: Cargo.toml
aps/aps-freeze_drying_procedures/: Cargo.toml
aps/aps-freeze_drying_procedures/src/: lib.rs
aps/aps-freezer_models/: Cargo.toml
aps/aps-freezers/: Cargo.toml
aps/aps-freezing_procedure_templates/: Cargo.toml
aps/aps-freezing_procedures/: Cargo.toml
aps/aps-geopositioning_device_models/: Cargo.toml
aps/aps-geopositioning_devices/: Cargo.toml
aps/aps-geopositioning_procedure_templates/: Cargo.toml
aps/aps-markers/: Cargo.toml
builder/: Cargo.toml  TIME_REQUIREMENTS.md  asset_models.mmd  assets.mmd  entities.mmd  ownables.mmd  owners.mmd  procedure_templates.mmd  procedures.mmd  table_names.mmd  workspace_dependencies.mmd
builder/src/: main.rs  visualize_dags.rs  visualize_workspace.rs
procedure-traits/: Cargo.toml
shared-schema/: README.md
(+451 files in other folders)
