[package]
name = "builder"
version = "0.1.0"
edition = "2024"

[dependencies]
synql = { git = "https://github.com/earth-metabolome-initiative/emi-monorepo", branch = "postgres-crate" }
sql_traits = { git = "https://github.com/earth-metabolome-initiative/emi-monorepo", branch = "postgres-crate" }
sql_constraints = { git = "https://github.com/earth-metabolome-initiative/emi-monorepo", branch = "postgres-crate" }
time_requirements = { git = "https://github.com/earth-metabolome-initiative/emi-monorepo", branch = "postgres-crate" }
sql_procedure_constraints = { git = "https://github.com/earth-metabolome-initiative/emi-monorepo", branch = "postgres-crate" }
mermaid-builder = "0.1.1"
