[package]
name = "builder"
version = "0.1.0"
edition = "2024"

[dependencies]
synql = { git = "https://github.com/earth-metabolome-initiative/synql", branch = "main" }
sql-traits = { git = "https://github.com/earth-metabolome-initiative/sql-traits", branch = "main" }
sql-rules = { git = "https://github.com/earth-metabolome-initiative/sql-rules", branch = "main" }
time_requirements = "0.1.0"
sql-procedure-rules = { path = "../crates/sql-procedure-rules" }
mermaid-builder = "0.1.1"
sqlparser = { version = "0.60", git = "https://github.com/LucaCappelletti94/sqlparser-rs", branch = "externalize-statements" }
quote = "1.0"
proc-macro2 = "1.0"
