[package]
name = "aps-aliquoting_procedure_templates"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation-errors.workspace = true
rosetta-uuid.workspace = true
aps-entities.workspace = true
aps-ownables.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedure_templates.workspace = true
aps-reused_procedure_template_asset_models.workspace = true
aps-volume_measuring_device_models.workspace = true
aps-volumetric_container_models.workspace = true

[lints]
workspace = true
