[package]
name = "aps-aliquoting_procedures"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta-uuid.workspace = true
aps-aliquoting_procedure_templates.workspace = true
aps-entities.workspace = true
aps-ownables.workspace = true
aps-procedure_asset_models.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedures.workspace = true
aps-volume_measuring_device_models.workspace = true
aps-volume_measuring_devices.workspace = true
aps-volumetric_containers.workspace = true
procedure-like = { path = "../../crates/procedure-like" }

[lints]
workspace = true
