[package]
name = "aps-assets"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation-errors.workspace = true
rosetta-uuid.workspace = true
aps-asset_models.workspace = true
aps-ownables.workspace = true

[lints]
workspace = true
