[package]
name = "aps-ball_mill_machines"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta-uuid.workspace = true
aps-assets.workspace = true
aps-commercial_ball_mill_machine_lots.workspace = true
aps-ownables.workspace = true
aps-physical_assets.workspace = true

[lints]
workspace = true
