[package]
name = "aps-ball_mill_procedure_templates"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation_errors.workspace = true
rosetta_uuid.workspace = true
aps-asset_compatibility_rules.workspace = true
aps-ball_mill_machine_models.workspace = true
aps-bead_models.workspace = true
aps-procedure_template_asset_models.workspace = true
aps-procedure_templates.workspace = true
aps-reused_procedure_template_asset_models.workspace = true
aps-volumetric_container_models.workspace = true

[lints]
workspace = true
