[package]
name = "aps-bead_models"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation_errors.workspace = true
rosetta_uuid.workspace = true
aps-asset_models.workspace = true
aps-physical_asset_models.workspace = true

[lints]
workspace = true
