[package]
name = "aps-col_taxa"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation-errors.workspace = true
rosetta-uuid.workspace = true
aps-entities.workspace = true
aps-organism_taxa.workspace = true

[lints]
workspace = true
