[package]
name = "aps-commercial_ball_mill_machine_lots"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta_uuid.workspace = true
aps-asset_models.workspace = true
aps-ball_mill_machine_models.workspace = true
aps-commercial_ball_mill_machine_models.workspace = true
aps-commercial_product_lots.workspace = true
aps-physical_asset_models.workspace = true

[lints]
workspace = true
