[package]
name = "aps-commercial_camera_lots"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta-uuid.workspace = true
aps-asset_models.workspace = true
aps-camera_models.workspace = true
aps-commercial_camera_models.workspace = true
aps-commercial_product_lots.workspace = true
aps-ownables.workspace = true
aps-physical_asset_models.workspace = true

[lints]
workspace = true
