[package]
name = "aps-commercial_freezer_models"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta-uuid.workspace = true
aps-asset_models.workspace = true
aps-commercial_products.workspace = true
aps-entities.workspace = true
aps-freezer_models.workspace = true
aps-ownables.workspace = true
aps-physical_asset_models.workspace = true

[lints]
workspace = true
