[package]
name = "aps-commercial_phone_device_models"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
validation-errors.workspace = true
rosetta-uuid.workspace = true
aps-asset_models.workspace = true
aps-camera_models.workspace = true
aps-commercial_camera_models.workspace = true
aps-commercial_geopositioning_device_models.workspace = true
aps-commercial_products.workspace = true
aps-entities.workspace = true
aps-geopositioning_device_models.workspace = true
aps-namespaced_ownables.workspace = true
aps-ownables.workspace = true
aps-physical_asset_models.workspace = true

[lints]
workspace = true
