[package]
name = "aps-commercial_products"
version = "0.1.0"
edition.workspace = true


[dependencies]
serde.workspace = true
diesel-builders.workspace = true
diesel.workspace = true
rosetta_uuid.workspace = true
aps-asset_models.workspace = true
aps-brands.workspace = true

[lints]
workspace = true
